Added step for executing handlers
Signed-off-by: iamabhishek-dubey <abhishekbhardwaj510@gmail.com>

--- a/roles/redis-cluster/tasks/follower.yml
+++ b/roles/redis-cluster/tasks/follower.yml
@@ -33,4 +33,4 @@
     group: redis
   become: yes
   notify:
-    - Ensure redis follower is running
+    - Ensure redis follower service is running
