--- a/roles/redis-cluster/tasks/leader.yml
+++ b/roles/redis-cluster/tasks/leader.yml
@@ -28,7 +28,7 @@
 - name: Ensure the redis configuration is updated (Leader)
   template:
     src: redis.conf.j2
-    dest: "{{ redis_conf_file_location }}/redis-leader.conf"
+    dest: "{{ redis_conf_file_location }}/redis.conf"
     owner: redis
     group: redis
   become: yes
