--- a/inventory/cluster.ini
+++ b/inventory/cluster.ini
@@ -8,11 +8,11 @@ leader
 follower
 
 [leader]
-redis-leader1 ansible_ssh_host=172.31.61.93 redis_port=6379
-redis-leader2 ansible_ssh_host=172.31.60.203 redis_port=6379
-redis-leader3 ansible_ssh_host=172.31.62.166 redis_port=6379
+redis-leader1 ansible_ssh_host=172.31.61.93 redis_port=6379 leader_id=0
+redis-leader2 ansible_ssh_host=172.31.60.203 redis_port=6379 leader_id=1
+redis-leader3 ansible_ssh_host=172.31.62.166 redis_port=6379 leader_id=2
 
 [follower]
-redis-follower1 ansible_ssh_host=172.31.61.93 redis_port=6380
-redis-follower2 ansible_ssh_host=172.31.60.203 redis_port=6380
-redis-follower3 ansible_ssh_host=172.31.62.166 redis_port=6380
+redis-follower1 ansible_ssh_host=172.31.61.93 redis_port=6380 leader_id=0
+redis-follower2 ansible_ssh_host=172.31.60.203 redis_port=6380 leader_id=1
+redis-follower3 ansible_ssh_host=172.31.62.166 redis_port=6380 leader_id=2
