Added playbooks for adding node
Signed-off-by: iamabhishek-dubey <abhishekbhardwaj510@gmail.com>

--- a/cluster.yml
+++ b/cluster.yml
@@ -5,4 +5,4 @@
 
 - hosts: redis_cluster
   roles:
-    - { role: redis-cluster, tags: ["preinstall", "redis-cluster"] }
+    - { role: redis-cluster, tags: ["install", "redis-cluster"] }
