--- a/inventory/cluster.ini
+++ b/inventory/cluster.ini
@@ -11,6 +11,7 @@ follower
 redis-leader1 ansible_ssh_host=172.31.51.110 redis_port=6379 leader_id=0
 redis-leader2 ansible_ssh_host=172.31.55.178 redis_port=6379 leader_id=1
 redis-leader3 ansible_ssh_host=172.31.48.98 redis_port=6379 leader_id=2
+redis-leader4 ansible_ssh_host=172.31.50.1 redis_port=6379 leader_id=3
 
 [follower]
 redis-follower1 ansible_ssh_host=172.31.51.110 redis_port=6380 leader_id=0
