--- a/playbooks/add-node.yml
+++ b/playbooks/add-node.yml
@@ -1,5 +1,8 @@
 ---
 - hosts: redis_cluster
+  vars:
+    redis_password: Opstree@1234
+    leader_redis_port: 6379
   tasks:
     - include: add-redis-leader.yml
       vars:
