--- a/playbooks/add-redis-leader.yml
+++ b/playbooks/add-redis-leader.yml
@@ -21,5 +21,5 @@
     {{ new_leader_node }}:{{ leader_redis_port }} {{ groups['leader'][0] }}:{{ leader_redis_port }}
   when: >
     inventory_hostname in groups['leader'][0] and
-    new_leader_node not in command_result.stdout
+    new_leader_node not in command_result.stdout and
     command_result.stdout.split('\n')|length < groups['leader']|length
