Updated inventory list
Signed-off-by: iamabhishek-dubey <abhishekbhardwaj510@gmail.com>

--- a/playbooks/add-node.yml
+++ b/playbooks/add-node.yml
@@ -8,6 +8,6 @@
       vars:
         new_leader_node: "{{ item }}"
       with_items:
-        - groups['leader']
+        - "{{ groups['leader'] | map('extract', hostvars, ['ansible_default_ipv4', 'address']) }}"
       when: >
         inventory_hostname in groups['leader'][0]
