--- a/playbooks/add-redis-leader.yml
+++ b/playbooks/add-redis-leader.yml
@@ -18,7 +18,7 @@
 - name: Ensure the new leader nodes are added to the cluster
   command: |-
     {{ redis_command }} --cluster add-node 
-    {{ new_leader_node }}:{{ leader_redis_port }} {{ groups['leader'][0] | map('extract', hostvars, ['ansible_default_ipv4', 'address']) }}:{{ leader_redis_port }}
+    {{ new_leader_node }}:{{ leader_redis_port }} {{ hostvars[inventory_hostname]['ansible_default_ipv4']['address'] }}:{{ leader_redis_port }}
   when: >
     inventory_hostname in groups['leader'][0] and
     new_leader_node not in command_result.stdout
