--- a/inventory/cluster.ini
+++ b/inventory/cluster.ini
@@ -2,6 +2,7 @@
 redis1 ansible_ssh_host=172.31.51.110
 redis2 ansible_ssh_host=172.31.55.178
 redis3 ansible_ssh_host=172.31.48.98
+redis4 ansible_ssh_host=172.31.50.1
 
 [redis_cluster:children]
 leader
