--- a/playbooks/add-node.yml
+++ b/playbooks/add-node.yml
@@ -1,4 +1,8 @@
 ---
+- hosts: redis
+  roles:
+    - { role: redis, tags: ["preinstall", "redis"] }
+
 - hosts: redis_cluster
   vars:
     redis_password: Opstree@1234
