--- a/playbooks/add-redis-leader.yml
+++ b/playbooks/add-redis-leader.yml
@@ -17,7 +17,7 @@
 
 - name: Print debug
   debug:
-    msg: command_result
+    msg: "{{ command_result }}"
 
 #- name: Ensuring all the redis leader configurations are placed
 #  include_role:
