--- a/playbooks/add-redis-leader.yml
+++ b/playbooks/add-redis-leader.yml
@@ -12,14 +12,14 @@
 - name: Ensure if redis cluster exists or not
   command: |-
     {{ redis_command }} cluster nodes
+  when: >
+    inventory_hostname in groups['leader'][0]
   register: command_result
 
 - name: Ensuring all the redis leader configurations are placed
   include_role:
     name: redis-cluster
     tasks_from: leader.yml
-  when: >
-    command_result.stdout.find(ansible_ssh_host) == -1
 
 - name: Ensure the new leader nodes are added to the cluster
   command: |-
