Changed structure for playbooks
Signed-off-by: iamabhishek-dubey <abhishekbhardwaj510@gmail.com>

--- a/inventory/cluster.ini
+++ b/inventory/cluster.ini
@@ -18,3 +18,4 @@ redis-leader4 ansible_ssh_host=172.31.50.1 redis_port=6379 leader_id=3
 redis-follower1 ansible_ssh_host=172.31.51.110 redis_port=6380 leader_id=0
 redis-follower2 ansible_ssh_host=172.31.55.178 redis_port=6380 leader_id=1
 redis-follower3 ansible_ssh_host=172.31.48.98 redis_port=6380 leader_id=2
+redis-follower4 ansible_ssh_host=172.31.50.1 redis_port=6380 leader_id=3
