--- a/playbooks/add-node.yml
+++ b/playbooks/add-node.yml
@@ -13,3 +13,4 @@
         new_leader_node: "{{ item }}"
       with_items:
         - "{{ groups['leader'] | map('extract', hostvars, ['ansible_default_ipv4', 'address']) }}"
+    - include: add-redis-follower.yml
