Changed structure for playbooks
Signed-off-by: iamabhishek-dubey <abhishekbhardwaj510@gmail.com>

--- a/playbooks/add-redis-leader.yml
+++ b/playbooks/add-redis-leader.yml
@@ -30,4 +30,4 @@
     {{ hostvars[inventory_hostname]['ansible_default_ipv4']['address'] }}:{{ leader_redis_port }}
   when: >
     inventory_hostname in groups['leader'][0] and
-    new_leader_node:leader_redis_port not in command_result.stdout
+    new_leader_node not in command_result.stdout
