--- a/playbooks/add-node.yml
+++ b/playbooks/add-node.yml
@@ -7,6 +7,7 @@
   vars:
     redis_password: Opstree@1234
     leader_redis_port: 6379
+    follower_redis_port: 6380
   tasks:
     - include: add-redis-leader.yml
       vars:
