--- a/playbooks/add-redis-follower.yml
+++ b/playbooks/add-redis-follower.yml
@@ -35,4 +35,4 @@
     - "{{ groups['follower'] }}"
   when:
     inventory_hostname in groups['leader'][0] and
-    join('%s:%s' %(new_follower_node) %(follower_redis_port)) not in command_result.stdout
+    new_follower_node + ':' + follower_redis_port|string not in command_result.stdout
