Changed structure for playbooks
Signed-off-by: iamabhishek-dubey <abhishekbhardwaj510@gmail.com>

--- a/playbooks/add-node.yml
+++ b/playbooks/add-node.yml
@@ -32,4 +32,4 @@
       vars:
         new_follower_node: "{{ item }}"
       with_items:
-        - "{{ groups['follower'] | map('extract', hostvars, ['ansible_default_ipv4', 'address']) }}"
+        - "{{ groups['follower'] }}"
