--- a/playbooks/add-redis-follower.yml
+++ b/playbooks/add-redis-follower.yml
@@ -19,11 +19,11 @@
 - name: Ensuring redis follower nodes are part of the cluster
   command: >-
     {{ redis_command }} --cluster add-node
-    {{ new_follower_node }}:{{ follower_redis_port }}
+    {{ hostvars[item]['ansible_default_ipv4']['address'] }}:{{ follower_redis_port }}
     {{ hostvars[groups['leader'][(hostvars[item]['leader_id'])]].ansible_default_ipv4.address }}:{{ leader_redis_port }}
     --cluster-slave
   args:
     stdin: "yes"
   when:
     inventory_hostname in groups['leader'][0] and
-    new_follower_node + ':' + follower_redis_port|string not in command_result.stdout
+    hostvars[item]['ansible_default_ipv4']['address'] + ':' + follower_redis_port|string not in command_result.stdout
