--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -17,12 +17,11 @@
     enabled: yes
     state: restarted
 
-- name:  Start Redis Sentinel Service
-  systemd : 
-    name:  redis-sentinel.service
-    enabled: yes 
-    state : restarted
-    
+- name: "restart sentinel"
+  service:
+    name: sentinel_{{ redis_sentinel_port }}
+    state: restarted
+  when: redis_as_service
     
 - name: Reload systemd daemon
   systemd:
