Added code for removing node
Signed-off-by: iamabhishek-dubey <abhishekbhardwaj510@gmail.com>

--- a/playbooks/remove-node.yml
+++ b/playbooks/remove-node.yml
@@ -28,5 +28,5 @@
       with_items:
         - groups['redis_cluster']
       when: >
-        node_status == 'remove'
+        node_status == 'remove' and
         inventory_hostname in groups['leader'][0]
