Added code for removing node
Signed-off-by: iamabhishek-dubey <abhishekbhardwaj510@gmail.com>

--- a/playbooks/remove-node.yml
+++ b/playbooks/remove-node.yml
@@ -26,4 +26,4 @@
       with_items:
         - groups['redis_cluster']
       when: >
-        node_status == 'remove' and
+        node_status == 'remove'
