Added code for removing node
Signed-off-by: iamabhishek-dubey <abhishekbhardwaj510@gmail.com>

--- a/playbooks/remove-node.yml
+++ b/playbooks/remove-node.yml
@@ -22,7 +22,7 @@
 
     - name: Finding the nodes that need to be removed
       debug:
-        msg: "{{ command_result.stdout_lines | select("search", ansible_ssh_host) }}"
+        msg: "{{ command_result.stdout_lines | select(ansible_ssh_host) }}"
       with_items:
         - groups['redis_cluster']
       when: >
