Added code for removing node
Signed-off-by: iamabhishek-dubey <abhishekbhardwaj510@gmail.com>

--- a/playbooks/remove-node.yml
+++ b/playbooks/remove-node.yml
@@ -22,6 +22,6 @@
 
     - name: Finding the nodes that need to be removed
       debug:
-        msg: "{{ command_result.stdout_lines | select(ansible_ssh_host) }}"
+        msg: "{{ command_result.stdout_lines | select('search', ansible_ssh_host) }}"
       when: >
         node_status == 'remove'
