--- a/playbooks/remove-node.yml
+++ b/playbooks/remove-node.yml
@@ -20,6 +20,12 @@
         {{ redis_command }} cluster nodes
       register: command_result
 
+    - name: Ensure the nodes need to removed are present in temporary file
+      local_action:
+        copy:
+          content: "{{ command_result.stdout_lines | select('search', ansible_ssh_host) }}"
+          dest: /tmp/node-removal
+
     - name: Finding the nodes that need to be removed
       debug:
         msg: "{{ command_result.stdout_lines | select('search', ansible_ssh_host) }}"
