Added code for removing node
Signed-off-by: iamabhishek-dubey <abhishekbhardwaj510@gmail.com>

--- a/playbooks/remove-node.yml
+++ b/playbooks/remove-node.yml
@@ -29,6 +29,8 @@
 
     - name: Finding the nodes that need to be removed
       debug:
-        msg: "{{ lookup('file', '/tmp/node-removal') }}"
+        msg: "{{ item }}"
+      with_items:
+        - "{{ lookup('file', '/tmp/node-removal') }}"
       when: >
         inventory_hostname in groups['leader'][0]
