--- a/playbooks/remove-node.yml
+++ b/playbooks/remove-node.yml
@@ -29,7 +29,7 @@
 
     - name: Finding the nodes that need to be removed
       debug:
-        msg: "{{ item }}"
+        msg: "{{ item.split(' ') }}"
       with_items:
         - "{{ lookup('file', '/tmp/node-removal') }}"
       when: >
