--- a/playbooks/remove-node.yml
+++ b/playbooks/remove-node.yml
@@ -28,8 +28,10 @@
         inventory_hostname in groups['leader'][0]
 
     - name: Finding the nodes that need to be removed
-      debug:
-        msg: "{{ item.split(' ')[0] }}"
+      command: |-
+        {{ redis_command }} --cluster del-node {{ item.split(' ')[0] }}
+#      debug:
+#        msg: "{{ item.split(' ')[0] }}"
       with_items:
         - "{{ lookup('file', '/tmp/node-removal') }}"
       when: >
