Added code for removing node
Signed-off-by: iamabhishek-dubey <abhishekbhardwaj510@gmail.com>

--- a/playbooks/remove-node.yml
+++ b/playbooks/remove-node.yml
@@ -27,19 +27,24 @@
       when: >
         node_status == 'remove'
 
-    - name: Ensuring the removed marked nodes are not part of the cluster
-      command: |-
-        {{ redis_command }} --cluster del-node 
-        {{ ansible_ssh_host }}:{{ leader_redis_port }} {{ item.split(' ')[0] }}
-      with_items:
-        - "{{ lookup('file', '/tmp/node-removal') }}"
-      when: >
-        inventory_hostname in groups['leader'][0] and
-        lookup('file', '/tmp/node-removal')|length > 0
-
-    - name: Ensuring the temporary file is removed after execution
-      file:
-        path: /tmp/node-removal
-        state: absent
+    - name: Debug
+      debug:
+        msg: "{{ lookup('file', '/tmp/node-removal')|length }}"
       when: >
         inventory_hostname in groups['leader'][0]
+#    - name: Ensuring the removed marked nodes are not part of the cluster
+#      command: |-
+#        {{ redis_command }} --cluster del-node
+#        {{ ansible_ssh_host }}:{{ leader_redis_port }} {{ item.split(' ')[0] }}
+#      with_items:
+#        - "{{ lookup('file', '/tmp/node-removal') }}"
+#      when: >
+#        inventory_hostname in groups['leader'][0] and
+#        lookup('file', '/tmp/node-removal')|length > 0
+#
+#    - name: Ensuring the temporary file is removed after execution
+#      file:
+#        path: /tmp/node-removal
+#        state: absent
+#      when: >
+#        inventory_hostname in groups['leader'][0]
