Added code for removing node
Signed-off-by: iamabhishek-dubey <abhishekbhardwaj510@gmail.com>

--- a/playbooks/remove-node.yml
+++ b/playbooks/remove-node.yml
@@ -21,7 +21,7 @@
       register: command_result
 
     - name: Ensure the nodes need to removed are present in temporary file
-      local:
+      local_action:
         module: copy
         content: "{{ command_result.stdout_lines | select('search', ansible_ssh_host) }}"
         dest: /tmp/node-removal
