--- a/inventory/cluster.ini
+++ b/inventory/cluster.ini
@@ -18,4 +18,4 @@ redis-leader4 ansible_ssh_host=172.31.56.250 redis_port=6379 leader_id=3 node_st
 redis-follower1 ansible_ssh_host=172.31.58.214 redis_port=6380 leader_id=0 node_status=ready
 redis-follower2 ansible_ssh_host=172.31.56.227 redis_port=6380 leader_id=1 node_status=ready
 redis-follower3 ansible_ssh_host=172.31.59.28 redis_port=6380 leader_id=2 node_status=ready
-redis-follower4 ansible_ssh_host=172.31.56.250 redis_port=6380 leader_id=3 node_status=ready
+redis-follower4 ansible_ssh_host=172.31.56.250 redis_port=6380 leader_id=3 node_status=remove
