--- a/playbooks/remove-node.yml
+++ b/playbooks/remove-node.yml
@@ -5,7 +5,7 @@
     leader_redis_port: 6379
     follower_redis_port: 6380
   tasks:
-    - name: Ensuring the temporary file is removed after execution
+    - name: Ensuring the temporary file is created before execution
       local_action:
         module: file
         path: /tmp/node-removal
@@ -29,7 +29,7 @@
     - name: Ensure the nodes need to removed are present in temporary file
       local_action:
         module: copy
-        content: "{{ command_result.stdout_lines | select('search', ansible_ssh_host) }}"
+        content: "{{ command_result.stdout_lines | select('search', ansible_ssh_host + ':' + redis_port) }}"
         dest: /tmp/node-removal
       when: >
         node_status == 'remove'
