--- a/inventory/cluster.ini
+++ b/inventory/cluster.ini
@@ -12,7 +12,7 @@ follower
 redis-leader1 ansible_ssh_host=172.31.58.214 redis_port=6379 leader_id=0 node_status=ready
 redis-leader2 ansible_ssh_host=172.31.56.227 redis_port=6379 leader_id=1 node_status=ready
 redis-leader3 ansible_ssh_host=172.31.59.28 redis_port=6379 leader_id=2 node_status=ready
-redis-leader4 ansible_ssh_host=172.31.56.250 redis_port=6379 leader_id=3 node_status=ready
+redis-leader4 ansible_ssh_host=172.31.56.250 redis_port=6379 leader_id=3 node_status=remove
 
 [follower]
 redis-follower1 ansible_ssh_host=172.31.58.214 redis_port=6380 leader_id=0 node_status=ready
