--- a/roles/redis-cluster/tasks/follower.yml
+++ b/roles/redis-cluster/tasks/follower.yml
@@ -25,7 +25,7 @@
   notify:
     - Ensure system daemon reloaded
 
-- name: Ensure the redis configuration is updated (Follower)
+- name: Ensure the redis sharded configuration is updated (Follower)
   template:
     src: redis.conf.j2
     dest: "{{ redis_conf_file_location }}/redis.conf"
@@ -34,6 +34,28 @@
   become: yes
   notify:
     - Ensure redis follower service is running
+  when: >
+    setup_mode == "sharded" and
+    groups['follower'] | length > 1
+
+- name: Ensuring the slaveof variables is set for Followers
+  set_fact:
+    redis_slaveof:  groups['leader'][0]
+  when: >
+    groups['follower']
+
+- name: Ensure the redis replicated configuration is updated (Follower)
+  template:
+    src: redis.replicated.conf.j2
+    dest: "{{ redis_conf_file_location }}/redis.conf"
+    owner: redis
+    group: redis
+  become: yes
+  notify:
+    - Ensure redis follower service is running
+  when: >
+    setup_mode == "replicated" and
+    groups['leader'] | length > 1
 
 - name: Ensuring that handlers are executed for follower
   meta: flush_handlers
