Added master slave capability
Signed-off-by: iamabhishek-dubey <abhishekbhardwaj510@gmail.com>

--- a/roles/redis-cluster/tasks/follower.yml
+++ b/roles/redis-cluster/tasks/follower.yml
@@ -55,7 +55,7 @@
     - Ensure redis follower service is running
   when: >
     setup_mode == "replicated" and
-    groups['leader'] | length > 1
+    groups['leader'] | length == 1
 
 - name: Ensuring that handlers are executed for follower
   meta: flush_handlers
