Added ansible role for sentinel
Signed-off-by: iamabhishek-dubey <abhishekbhardwaj510@gmail.com>

--- a/inventory/replicated.ini
+++ b/inventory/replicated.ini
@@ -3,6 +3,11 @@ redis1 ansible_ssh_host=172.31.57.255
 redis2 ansible_ssh_host=172.31.58.213
 redis3 ansible_ssh_host=172.31.51.19
 
+[sentinel]
+sentinel1 ansible_ssh_host=172.31.57.255 sentinel_port=26379 quorum_count=2
+sentinel2 ansible_ssh_host=172.31.57.255 sentinel_port=26379 quorum_count=2
+sentinel3 ansible_ssh_host=172.31.57.255 sentinel_port=26379 quorum_count=2
+
 [redis_cluster:children]
 leader
 follower
