--- a/inventory/cluster.ini
+++ b/inventory/cluster.ini
@@ -12,10 +12,10 @@ follower
 redis-leader1 ansible_ssh_host=172.31.50.187 redis_port=6379 leader_id=0 node_status=ready
 redis-leader2 ansible_ssh_host=172.31.51.129 redis_port=6379 leader_id=1 node_status=ready
 redis-leader3 ansible_ssh_host=172.31.51.154 redis_port=6379 leader_id=2 node_status=ready
-redis-leader4 ansible_ssh_host=172.31.55.4 redis_port=6379 leader_id=3 node_status=ready
+redis-leader4 ansible_ssh_host=172.31.55.4 redis_port=6379 leader_id=3 node_status=remove
 
 [follower]
 redis-follower1 ansible_ssh_host=172.31.50.187 redis_port=6380 leader_id=0 node_status=ready
 redis-follower2 ansible_ssh_host=172.31.51.129 redis_port=6380 leader_id=1 node_status=ready
 redis-follower3 ansible_ssh_host=172.31.51.154 redis_port=6380 leader_id=2 node_status=ready
-redis-follower4 ansible_ssh_host=172.31.55.4 redis_port=6380 leader_id=3 node_status=remove
+#redis-follower4 ansible_ssh_host=172.31.55.4 redis_port=6380 leader_id=3 node_status=remove
