Added monitoring support for redis
Signed-off-by: iamabhishek-dubey <abhishekbhardwaj510@gmail.com>

--- a/roles/redis/defaults/main.yml
+++ b/roles/redis/defaults/main.yml
@@ -4,6 +4,7 @@ upgrade_redis: false
 
 redis_version: 7.0.6
 redis_port: 6379
+exporter_version: v1.45.0
 
 redis_conf_file_location: /etc/redis
 redis_data_dir: /opt/redis/data
