--- a/roles/redis/handlers/main.yml
+++ b/roles/redis/handlers/main.yml
@@ -10,3 +10,10 @@
     enabled: yes
     state: restarted
   become: yes
+
+- name: EEnsure redis exporter service is running
+  systemd:
+    name: redis-exporter.service
+    enabled: yes
+    state: restarted
+  become: yes
