Added monitoring support for redis
Signed-off-by: iamabhishek-dubey <abhishekbhardwaj510@gmail.com>

--- a/roles/redis/handlers/main.yml
+++ b/roles/redis/handlers/main.yml
@@ -11,7 +11,7 @@
     state: restarted
   become: yes
 
-- name: EEnsure redis exporter service is running
+- name: Ensure redis exporter service is running
   systemd:
     name: redis-exporter.service
     enabled: yes
