Added monitoring support for redis
Signed-off-by: iamabhishek-dubey <abhishekbhardwaj510@gmail.com>

--- a/roles/redis/tasks/monitoring.yml
+++ b/roles/redis/tasks/monitoring.yml
@@ -14,7 +14,7 @@
     dest: /tmp
     remote_src: yes
   when: >
-    not redis_status.stat.exists
+    not redis_exporter_status.stat.exists
 
 - name: Ensuring that redis exporter binary is placed on right location
   copy:
@@ -22,7 +22,7 @@
     dest: /usr/local/bin/redis_exporter
     remote_src: yes
   when: >
-    not redis_status.stat.exists
+    not redis_exporter_status.stat.exists
   become: yes
 
 - name: Ensure the redis exporter tarball is cleaned up
@@ -33,7 +33,7 @@
     - "/tmp/redis_exporter-{{ exporter_version }}.linux-amd64.tar.gz"
     - "/tmp/redis_exporter-{{ exporter_version }}.linux-amd64"
   when: >
-    not redis_status.stat.exists
+    not redis_exporter_status.stat.exists
   become: yes
 
 - name: Ensure that redis exporter service exists on the system
