Added monitoring support for redis
Signed-off-by: iamabhishek-dubey <abhishekbhardwaj510@gmail.com>

--- a/roles/redis/tasks/monitoring.yml
+++ b/roles/redis/tasks/monitoring.yml
@@ -21,6 +21,7 @@
     src: /tmp/redis_exporter-{{ exporter_version }}.linux-amd64/redis_exporter
     dest: /usr/local/bin/redis_exporter
     remote_src: yes
+    mode: 0555
   when: >
     not redis_exporter_status.stat.exists
   become: yes
