Added monitoring support for redis cluster
Signed-off-by: iamabhishek-dubey <abhishekbhardwaj510@gmail.com>

--- a/roles/redis-cluster/defaults/main.yml
+++ b/roles/redis-cluster/defaults/main.yml
@@ -74,3 +74,5 @@ redis_repl_backlog_size: false
 redis_min_slaves_to_write: 0
 redis_min_slaves_max_lag: 10
 redis_slaveof: false
+
+redis_monitoring_enabled: true
