--- a/roles/redis-cluster/tasks/follower.yml
+++ b/roles/redis-cluster/tasks/follower.yml
@@ -57,5 +57,19 @@
     setup_mode == "replicated" and
     groups['leader'] | length == 1
 
+- name: Ensure that redis follower exporter service exists
+  template:
+    src: redis-exporter.service.j2
+    dest: "/etc/systemd/system/redis-follower-exporter.service"
+    owner: root
+    group: root
+  become: yes
+  notify:
+    - Ensure system daemon reloaded
+    - Ensure redis exporter service is running
+  when: >
+    inventory_hostname in groups['follower]' and
+    redis_monitoring_enabled
+
 - name: Ensuring that handlers are executed for follower
   meta: flush_handlers
